--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -5,10 +5,11 @@
                                   <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <link rel="stylesheet" href="../../css/bootstrap.css">
-          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
           <script src="../../js/jquery-1.11.3.js"></script>
-          <script src="../../vendor/webcomponentsjs/webcomponents.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+    <script src="../../vendor/webcomponentsjs/webcomponents.js"></script>
           <script type="text/javascript" src="dynamic-cards.js"></script>
           <script type="text/javascript" src="../../js/isotope.pkgd.min.js"></script>
           <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
@@ -27,6 +28,8 @@
           <link rel="import" href="../../vendor/paper-ripple/paper-ripple.html">
 
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
   <!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
   <link rel="stylesheet" type="text/css" href="../../slider/style.css" />
@@ -52,11 +55,11 @@
       margin-top: 0%;
       margin-left: 0%;
       margin-right: 0%;
-    overflow: auto; 
-    } 
+    overflow: auto;
+    }
         #paper-card{
       margin-top: 2%;
-      margin-left: 2%; 
+      margin-left: 2%;
       margin-right: 2%;
       width: 300px;
     }
@@ -114,13 +117,13 @@
         #home-icon{
       float: right;
       bottom: 36px;
-    } 
+    }
     #btn{
       margin-left: 45%;
       background: #00695C;
     }
   </style>
- 
+
 
 
 
@@ -145,8 +148,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-	  
-        
+
+
 
 		<li class="dropdown" >
           <a href="stheh.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Share The Happiness <span class="sr-only">(current)</span><span class="caret"></span></a>
@@ -158,7 +161,7 @@
             <li><a href="stheh3.html">Be A Part</a></li>
           </ul>
         </li>
-		
+
 	  <li><a href="pog.html">Partners Of Growth</a></li>
 		<li><a href="faq.html">FAQs</a></li>
 		<li><a href="help.html">Help</a></li>
@@ -176,7 +179,7 @@
         </li>
 		-->
       </ul>
-      
+
 	   <!-- Searchbar -->
 	  <form class="navbar-form navbar-right .pull-left" role="search">
         <div class="form-group">
@@ -184,20 +187,20 @@
         </div>
         <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span>&nbsp;Search</button>
       </form>
-       
+
 	   <ul class="nav navbar-nav navbar-right">
-      
+
 
 	  <li><a href="#myModal" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-user"></span>&nbsp;Sign Up</a></li>
-		
-        
+
+
 
 		<li><a href="#myModal1" data-toggle="modal" data-target="#myModal1"><span class="glyphicon glyphicon-log-in"></span>&nbsp;Login</a></li>
-      
-	  
-	  </ul>  
 
-			 
+
+	  </ul>
+
+
  </div><!-- /.container-fluid -->
  </div>
 </nav>
@@ -206,25 +209,25 @@
 <div class="modal fade" id="myModal">
 	<div class="modal-dialog">
       <div class="modal-content">
-        
-		
+
+
 		<div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
           <h4 class="modal-title">Sign Up</h4>
         </div>
-        
-		
-		
-		
+
+
+
+
 		<div class="modal-body">
-         
+
 <form>
 
 		 <div class="form-group">
     		<label for="exampleInputEmail1">Email address</label>
     		<input class="form-control" id="exampleInputEmail1" placeholder="Enter email" type="email">
   		  </div>
-		  
+
 		<div class="form-group">
 		  	<label for="exampleInputPassword1">Password</label>
 			<input class="form-control" id="exampleInputPassword1" placeholder="Password" type="password">
@@ -233,7 +236,7 @@
 		  	<label for="exampleInputPassword1">Confirm Password</label>
 			<input class="form-control" id="exampleInputPassword1" placeholder="Password" type="password">
 		  </div>
-		  
+
 		  <button type="button" class="btn btn-primary">Sign Up</button>
 		  <h4>Sign in with third party account</h4>
 
@@ -250,20 +253,20 @@
 </form>
 
 		  </div>
-		
-		
-		
-		
-		
-		
-		
+
+
+
+
+
+
+
         </div>
-		
-	
-		
-		
-		
-		
+
+
+
+
+
+
       </div>
     </div>
 </div>
@@ -272,31 +275,31 @@
 <div class="modal fade" id="myModal1">
 <div class="modal-dialog">
       <div class="modal-content">
-        
-		
+
+
 		<div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
           <h4 class="modal-title">Sign In</h4>
         </div>
-        
-		
-		
-		
+
+
+
+
 		<div class="modal-body">
-         
+
 <form>
 
 		 <div class="form-group">
     		<label for="exampleInputEmail1">Email address</label>
     		<input class="form-control" id="exampleInputEmail1" placeholder="Enter email" type="email">
   		  </div>
-		  
+
 		<div class="form-group">
 		  	<label for="exampleInputPassword1">Password</label>
 			<input class="form-control" id="exampleInputPassword1" placeholder="Password" type="password">
 		  </div>
-         		
-		  
+
+
 		  <button type="button" class="btn btn-primary">Sign In</button>
 		  <h4>Sign in with third party account</h4>
 
@@ -337,7 +340,7 @@
     <a href="#" title="For Hope"><span><img src="../../carousel/tooltips/new1.jpg" alt="For Hope"/>5</span></a>
   </div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.com/vi">bootstrap slider</a> by WOWSlider.com v8.6</div>
   <div class="ws_shadow"></div>
-  </div>  
+  </div>
   <script type="text/javascript" src="../../slider/wowslider.js"></script>
   <script type="text/javascript" src="../../slider/script.js"></script>
   <!-- End WOWSlider.com BODY section -->
@@ -345,7 +348,7 @@
 
 
 
-  
+
 </div>
 <!-- jumbotron -->
 
@@ -399,7 +402,7 @@
 
 
 <!-- app space-->
-  
+
 <div class="jumbotron" style="background-color: #004D40;">
 <div class="container" style="color: #362f2d;">
         <div id="cards" style="width: 100%;">
@@ -429,70 +432,70 @@
   <dd><a href="stheh.html">Initiate</a></dd>
   <dd><a href="stheh2.html">Explore</a></dd>
   <dd><a href="stheh3.html">Be A Part</a></dd>
-</dl>	
- 
+</dl>
+
  </div>
 <div class="col-md-3 col-sm-4" style="background-color: #2c3e40;">
- 
+
  <dl>
   <dt>How To Help</dt>
   <dd><a href="help.html">Help</a></dd>
   <dd><a href="beango.html">Register As A NGO</a></dd>
   <dd><a href="beap.html">Register As A Partner</a></dd>
   <dd><a href="index.html">Browse Projects</a></dd>
-</dl>	
- 
+</dl>
+
  </div>
  <div class="col-md-3 col-sm-4" style="background-color: #2c3e40;">
- 
+
  <dl>
   <dt>Support</dt>
   <dd><a href="pog.html">Our Partners</a></dd>
   <dd><a href="#">Our NGOs</a></dd>
   <dd><a href="faq.html">FAQs</a></dd>
-</dl>	
- 
+</dl>
+
  </div>
  <div class="col-md-3 col-sm-4" style="background-color: #2c3e40;">
- 
+
  <dl>
  <dt>Contact Us</dt>
    <dd><a href="faq-writetous.html">Write To Us</a></dd>
-  
 
 
-</dl>	
+
+</dl>
 
  </div>
   </div>
-  
-  
+
+
  <div class="row">
- 
+
  <div style="background-color: #2c3e40;">
- 
+
  <div class="col-sm-3">
  </div>
- 
+
 <div class="col-sm-2">
    <a href="#">Facebook &nbsp;</a> <i class="fa fa-facebook fa-2x"></i>
-</div> 
- 
+</div>
+
 <div class="col-sm-2">
   <a href="#">Google Plus &nbsp;</a><i class="fa fa-google-plus fa-2x"></i>
   </div>
-  
+
   <div class="col-sm-2">
   <a href="#">Youtube &nbsp;</a><i class="fa fa-youtube fa-2x"></i>
  </div>
- 
+
  <div class="col-sm-3">
  </div>
- 
+
  </div>
  </div>
- 
- 
+
+
 
  </div>
 </div>
